--- a/index.html
+++ b/index.html
@@ -20,7 +20,28 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
+        <!-- header -->
+        <header class="universal">
+          <div class="container universal-container">
+            <a class="universal-logo" href="index.html">
+              <img src="./images/logo.svg" alt="logo" width="64px" height="64px" />
+            </a>
+    
+            <a class="button" href="#">Free Consultation</a>
+          </div>
+        </header>
     <main>
+      <!-- hero -->
+      <section class="hero">
+        <div class="container hero-container">
+          <h1 class="hero-title">Design solutions made easy</h1>
+          <p class="hero-text">
+            With over ten years of experience in various design disciplines, I’m
+            your one-stop shop for your design needs.
+          </p>
+        </div>
+      </section>
+      <!-- solutions -->
       <section class="solutions">
         <div class="container solutions-container">
           <ul class="solutions-grid">
@@ -71,6 +92,7 @@
           </ul>
         </div>
       </section>
+      <!-- info -->
       <section class="pt-[68px] pb-[68px]">
         <div
           class="max-w-[1150px] ml-auto mr-auto flex gap-[20px] items-center justify-between"
@@ -111,7 +133,17 @@
           </p>
         </div>
         <a class="transition duration-500 pt-[14px] pb-[14px] pl-[45px] pr-[45px] rounded-[28px] inline-block bg-[var(--red)] font-bold text-[var(--white)] hover:bg-[var(--orange)]" href="#">Free Consultation</a>
-      </section>
+      </section>   
+    <!-- footer -->
+    <footer class="universal">
+      <div class="container universal-container">
+        <a class="universal-logo" href="index.html">
+          <img src="./images/logo.svg" alt="logo" width="64px" height="64px" />
+        </a>
+
+        <a class="button" href="#">Free Consultation</a>
+      </div>
+    </footer>
     </main>
   </body>
 </html>
